--- a/wa.user.styl
+++ b/wa.user.styl
@@ -675,7 +675,7 @@ define('ac' + key, val) for key, val in ac
         }
     }
 
-    /// Custom intro image.
+    // Custom intro image.
     svg_bg = to_svg(bg-2)
     svg_ac = to_svg(ac-0)
     :root {
@@ -701,7 +701,7 @@ define('ac' + key, val) for key, val in ac
         --intro-image: _i
     }
 
-    /// Global.
+    // Global.
     html > body {
         background-image: none i
         c: var(--fg-0) 0 var(--bg-0)
@@ -742,20 +742,22 @@ define('ac' + key, val) for key, val in ac
         [data-asset-chat-background-light] { filter: invert(1) i }
     }
 
-    /// Modals.
+    // Modals.
     .overlay {
         /// -> Fix headers.
-        /.eJ0yJ { c: 0 0 t }
+        .eJ0yJ { c: 0 0 t }
+
         /// Media/Avatar viewers have different headers. @upstream
         ._21ltg, > .KeLEe {
-            c: 0 0 bg-3;
-            border-bottom: 1px solid bg-5 i
+            c: 0 0 var(--bg-3);
+            border-bottom: 1px solid var(--bg-5) i
         }
+
         /// -> Fix media selection.
-        /._1KWct { c: 0 bg-5 bg-3 }
+        /._1KWct { c: 0 var(--bg-5) var(--bg-3) }
     }
 
-    /// Loading.
+    // Loading.
     [id *= 'startup'] {
         c: 0 0 bg-0
 
@@ -805,9 +807,11 @@ define('ac' + key, val) for key, val in ac
         border: 1px solid bg-5 i
         box-shadow: 0 2px 4px sh
 
+        /// Odd header-like tall background.
+        &::after { content: unset i }
+
         /// Search.
         .gQzdc, ._3qx7_ {
-            c: 0 0 bg-3
             border-bottom: 1px solid bg-5 i
             &::after { display: none i }
         }
@@ -818,12 +822,14 @@ define('ac' + key, val) for key, val in ac
         }
     }
 
+    // Chat.
     #main {
         /// Reset header.
         > header {
             border-right: none i
             border-bottom: 1px solid i
-            c: 0 bg-4
+            c: 0 var(--bg-5)
+
             /// Hide borders.
             &::after { content: unset i }
         }
