--- a/wa.user.styl
+++ b/wa.user.styl
@@ -200,6 +200,8 @@ define('ac' + key, val) for key, val in ac
         --teal-light-rgb: var(--ac-1-rgb) //29,233,182;
         --teal-lighter: var(--ac-2) //#00bfa5;
         --teal-lighter-rgb: var(--ac-2) //0,191,165;
+        --green-deep: var(--green) //#1b9a59;
+        --green-deep-rgb: var(--green-rgb) //27,154,89;
         --active-tab-marker: var(--ac-0) //#00af9c;
         --active-tab-marker-rgb: var(--ac-0-rgb) //0,175,156;
         --app-background-stripe: var(--bg-1) //#091e1f;
@@ -442,8 +444,8 @@ define('ac' + key, val) for key, val in ac
         --panel-background-rgb: var(--bg-3-rgb) //28,40,47;
         --panel-background-active: #1a262d;
         --panel-background-active-rgb: 26,38,45;
-        --panel-background-colored: var(--bg-3) //#222e35;
-        --panel-background-colored-rgb: var(--bg-3-rgb) //34,46,53;
+        --panel-background-colored: var(--ac-4) //#222e35;
+        --panel-background-colored-rgb: var(--ac-4-rgb) //34,46,53;
         --panel-background-colored-deeper: var(--bg-3) //#222e35;
         --panel-background-colored-deeper-rgb: var(--bg-3-rgb) //34,46,53;
         --panel-background-deep: var(--bg-2) //#162026;
