global: fix system messages and drawer header

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -909,7 +909,7 @@ define('ac' + key, val) for key, val in ac
         ._14VS3 > ._1V8rX {
             border-left: 1px solid bg-5 i
             .copyable-area > header {
-                border-bottom: 1px solid bg-5 i
+                border-bottom: none i
             }
         }
     }
@@ -927,10 +927,10 @@ define('ac' + key, val) for key, val in ac
         }
 
         /// Remove text shadow.
-        ._1E1g0 {
-            font-weight: bold i
-            text-shadow: none i
-        }
+        ._1E1g0 { text-shadow: 0 1px 0 rgba(0,0,0,.6; }
+            
+        /// Tweak 'unread messages' alert.
+        ._9WQEN { border: none i }
 
         /// Footer.
         > footer {
