global: system message fix

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -927,7 +927,7 @@ define('ac' + key, val) for key, val in ac
         }
 
         /// Remove text shadow.
-        ._1E1g0 { text-shadow: 0 1px 0 rgba(0,0,0,.6; }
+        ._1E1g0 { text-shadow: 0 1px 0 rgba(0,0,0,.6) }
             
         /// Tweak 'unread messages' alert.
         ._9WQEN { border: none i }
