vars: some new color variations

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -212,8 +212,8 @@ define('ac' + key, val) for key, val in ac
         --app-background-deeper-rgb: var(--bg-0-rgb) //8,14,18;
         --audio-progress-incoming: var(--green) //#3bb463;
         --audio-progress-incoming-rgb: var(--green-rgb) //59,180,99;
-        --audio-progress-outgoing: var(--fg-5) //#5f8884;
-        --audio-progress-outgoing-rgb: var(--fg-5-rgb) //95,136,132;
+        --audio-progress-outgoing: var(--ac-2) //#5f8884;
+        --audio-progress-outgoing-rgb: var(--ac-2-rgb) //95,136,132;
         --audio-progress-played-incoming: var(--blue) //#5ba0c3;
         --audio-progress-played-incoming-rgb: var(--blue-rgb) //91,160,195;
         --audio-progress-played-outgoing: var(--blue) //#55a5c5;
@@ -236,8 +236,8 @@ define('ac' + key, val) for key, val in ac
         --background-default-active-rgb: var(--bg-3-rgb) //32,44,50;
         --background-default-hover: var(--bg-2) //#17232a;
         --background-default-hover-rgb: var(--bg-2-rgb) //23,35,42;
-        --border-bubble: var(--bg-5) //#f1f1f20f;
-        --border-bubble-rgb: var(--fg-3-rgb) //241,241,242;
+        --border-bubble: var(--ac-5) //#f1f1f20f;
+        --border-bubble-rgb: var(--ac-5-rgb) //241,241,242;
         --border-default: var(--bg-3) //#1b282e;
         --border-default-rgb: var(--bg-3-rgb) //27,40,46;
         --border-list: var(--bg-3) //#1b282e;
@@ -424,7 +424,7 @@ define('ac' + key, val) for key, val in ac
         --notification-biz-background-rgb: var(--bg-3-rgb) //28,40,47;
         --notification-biz-text: #55fad9;
         --notification-biz-text-rgb: 85,250,217;
-        --notification-e2e-background: var(--bg-3) //#1c282f;
+        --notification-e2e-background: var(--bg-0) //#1c282f;
         --notification-e2e-background-rgb: var(--bg-3-rgb) //28,40,47;
         --notification-e2e-icon: #fad964;
         --notification-e2e-icon-rgb: 250,217,100;
@@ -522,10 +522,10 @@ define('ac' + key, val) for key, val in ac
         --spinner-default-rgb: var(--fg-3-rgb) //117,120,122;
         --spinner-highlight: var(--ac-0) //#00af9c;
         --spinner-highlight-rgb: var(--ac-0-rgb) //0,175,156;
-        --spinner-incoming: #60696e;
-        --spinner-incoming-rgb: 96,105,110;
-        --spinner-outgoing: #4c7a75;
-        --spinner-outgoing-rgb: 76,122,117;
+        --spinner-incoming: var(--fg-5) //#60696e;
+        --spinner-incoming-rgb: var(--fg-5-rgb) //96,105,110;
+        --spinner-outgoing: var(--ac-5) //#4c7a75;
+        --spinner-outgoing-rgb: var(--ac-5-rgb) //76,122,117;
         --status-background: var(--bg-1) //#000;
         --status-background-rgb: var(--bg-1-rgb) //0,0,0;
         --status-background-hover: var(--bg-2) //#242424;
