vars: chatlist icons and contact divider

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -236,8 +236,8 @@ define('ac' + key, val) for key, val in ac
         --background-default-active-rgb: var(--bg-3-rgb) //32,44,50;
         --background-default-hover: var(--bg-2) //#17232a;
         --background-default-hover-rgb: var(--bg-2-rgb) //23,35,42;
-        --border-bubble: var(--ac-5) //#f1f1f20f;
-        --border-bubble-rgb: var(--ac-5-rgb) //241,241,242;
+        --border-bubble: var(--bg-5) //#f1f1f20f;
+        --border-bubble-rgb: var(--bg-5-rgb) //241,241,242;
         --border-default: var(--bg-3) //#1b282e;
         --border-default-rgb: var(--bg-3-rgb) //27,40,46;
         --border-list: var(--bg-3) //#1b282e;
@@ -306,8 +306,8 @@ define('ac' + key, val) for key, val in ac
         --chat-marker-admin-border-rgb: var(--ac-0-rgb) //0,175,156;
         --chat-marker-border: var(--fg-3) //#999999b3;
         --chat-marker-border-rgb: var(--fg-3-rgb) //153,153,153;
-        --chatlist-icon: var(--fg-3) //#f1f1f299;
-        --chatlist-icon-rgb: var(--fg-3-rgb) //241,241,242;
+        --chatlist-icon: var(--fg-5) //#f1f1f299;
+        --chatlist-icon-rgb: var(--fg-5-rgb) //241,241,242;
         --checkbox-background: var(--ac-0) //#00af9c;
         --checkbox-background-rgb: var(--ac-0-rgb) //0,175,156;
         --checkbox-mark: var(--white) //#101d24;
