--- a/wa.user.styl
+++ b/wa.user.styl
@@ -928,9 +928,16 @@ define('ac' + key, val) for key, val in ac
 
         /// Remove text shadow.
         ._1E1g0 { text-shadow: 0 1px 0 rgba(0,0,0,.6) }
-            
+
         /// Tweak 'unread messages' alert.
         ._9WQEN { border: none i }
+
+        /// Tweak box-shadow for message bubbles.
+        [class *= 'message-'][data-id] {
+            > span + div > div {
+                box-shadow: 0 1px 0 s('rgba(var(--shadow-rgb), 0.33)') i;
+            }
+        }
 
         /// Footer.
         > footer {
