--- a/wa.user.styl
+++ b/wa.user.styl
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
-@version      2.8.0
+@version      2.9.0
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
 @preprocessor stylus
@@ -665,9 +665,9 @@ define('ac' + key, val) for key, val in ac
         --bg-rep       : bg_rep
 
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp NEXT — June 4th, 2020';
-        --message: 'Towards v3 of DWA! The last update broke too many things.';
-        --changes: 'https://github.com/vednoc/dark-whatsapp';
+        --version: 'Dark-WhatsApp 2.9.0 — June 5th, 2020';
+        --message: 'Towards v3 of DWA! The last update broke too many things, and we are rewriting core functionality — the dark theme — so that in future updates we can reimplement currently broken DWA features – compact mode, tail styles, "private mode", etc.';
+        --changes: '\A\A https://github.com/vednoc/dark-whatsapp';
 
         /\*{
             @supports (scrollbar-width: thin) {
