--- a/wa.user.styl
+++ b/wa.user.styl
@@ -946,7 +946,8 @@ define('ac' + key, val) for key, val in ac
 
         /// Tweak box-shadow for message bubbles.
         [class *= 'message-'][data-id] {
-            > span + div > div {
+            /// Exclude stickers.
+            > span + div:not(.urabC) > div {
                 box-shadow: 0 1px 0 s('rgba(var(--shadow-rgb), 0.33)') i;
             }
         }
