vars: update a few color variables
`--border-bubble` is used for contact dividers.

`--panel-background-colored` is used for left pane as well as when
forwarding a message. I've decided to switch back to background colors
since accent colors really stand out way more than they should. What's
more, WA's dark mode doesn't use accent colors either, but it's still
unfinished, which can be seen in many other places.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -239,8 +239,8 @@ define('ac' + key, val) for key, val in ac
         --background-default-active-rgb: var(--bg-3-rgb) //32,44,50;
         --background-default-hover: var(--bg-2) //#17232a;
         --background-default-hover-rgb: var(--bg-2-rgb) //23,35,42;
-        --border-bubble: var(--bg-5) //#f1f1f20f;
-        --border-bubble-rgb: var(--bg-5-rgb) //241,241,242;
+        --border-bubble: var(--shadow) //#f1f1f20f;
+        --border-bubble-rgb: var(--shadow-rgb) //241,241,242;
         --border-default: var(--bg-3) //#1b282e;
         --border-default-rgb: var(--bg-3-rgb) //27,40,46;
         --border-list: var(--bg-3) //#1b282e;
@@ -447,9 +447,9 @@ define('ac' + key, val) for key, val in ac
         --panel-background-rgb: var(--bg-3-rgb) //28,40,47;
         --panel-background-active: #1a262d;
         --panel-background-active-rgb: 26,38,45;
-        --panel-background-colored: var(--ac-4) //#222e35;
-        --panel-background-colored-rgb: var(--ac-4-rgb) //34,46,53;
-        --panel-background-colored-deeper: var(--ac-3) //#222e35;
+        --panel-background-colored: var(--bg-4) //#222e35;
+        --panel-background-colored-rgb: var(--bg-4-rgb) //34,46,53;
+        --panel-background-colored-deeper: var(--bg-3) //#222e35;
         --panel-background-colored-deeper-rgb: var(--bg-3-rgb) //34,46,53;
         --panel-background-deep: var(--bg-2) //#162026;
         --panel-background-deep-rgb: var(--bg-2-rgb) //22,32,38;
